--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -4987,6 +4987,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-ttnode=y
 # end of 3. Applications
 
 #
