--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -4988,6 +4988,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-ttnode=y
+CONFIG_PACKAGE_luci-theme-argon=y
 # end of 3. Applications
 
 #
